--- a/scenarios/.docker.env
+++ b/scenarios/.docker.env
@@ -65,6 +65,7 @@ export OFFLINE_WS_SOURCE="$DEPLOY_WS_PREFIX/offline/launch/setup.bash"
 export SPOT_NUC_WS_SOURCE="$DEPLOY_WS_PREFIX/launch/setup.bash"
 export SPOT_XAVIER_DRIVERS_WS_SOURCE="$DEPLOY_WS_PREFIX/drivers/launch/setup.bash"
 export SPOT_XAVIER_CORE_WS_SOURCE="$DEPLOY_WS_PREFIX/core/launch/setup.bash"
+export SPOT_XAVIER_CAMERAS_WS_SOURCE="$DEPLOY_WS_PREFIX/cameras/launch/setup.bash"
 
 # set the uav entrypoint (docker-compose for uav.simulation and uav.robot)
 export UAV_DOCKER_ENTRYPOINT="ws-shell.bash"
