--- a/scenarios/systems/robot/spot.xavier.env
+++ b/scenarios/systems/robot/spot.xavier.env
@@ -26,6 +26,9 @@ export deploy_ssh=${ROBOT}.xavier
 
 # export the arm docker base image type
 export GPU_ENABLE_TYPE="arm-gpu-chonky"
+if [[ "$SERVICE" == "cameras" ]]; then
+  export GPU_ENABLE_TYPE="arm-gpu-skinny-opencv4"
+fi
 
 # deployer, rsync exclude options
 # -- see operations/scenarios/transfer/.ugv.env for details
