--- a/deploybooks/workspaces/uav.ds.yaml
+++ b/deploybooks/workspaces/uav.ds.yaml
@@ -17,6 +17,9 @@
     # setup pre-defined environment variables, for workspace env import
     - +env:DOCKER_CONTAINER=${UAV_COMPUTER}-perception-shell
 
+    # export the catkin workspace
+    - export CATKIN_PROFILE=perception.${COMPUTER_ARCH}
+
     # extend the base perception workspace
     - +extend: workspaces/base/perception
 
