--- a/deploybooks/workspaces/ugv.simulation.yaml
+++ b/deploybooks/workspaces/ugv.simulation.yaml
@@ -44,6 +44,9 @@
     # setup pre-defined environment variables, for workspace env import
     - +env:DOCKER_CONTAINER=${ROBOT}-perception-shell
 
+    # export the catkin workspace
+    - export CATKIN_PROFILE=perception.${COMPUTER_ARCH}
+
     # extend the base perception workspace
     - +extend: workspaces/base/perception
 
