fixing typo in tutorial docs

--- a/deploybooks/env/tutorial.env.yaml
+++ b/deploybooks/env/tutorial.env.yaml
@@ -132,15 +132,15 @@
     newline ;
 
     comment "# start all docker containers";
-    text subt deployer $INFRASTRUCTURE.$PLATFORM.$ROBOT.docker.shell.start;
+    text subt deployer $INFRASTRUCTURE.$PLATFORM.$ROBOT.docker.start;
     newline ;
 
     comment "# stop all docker containers";
-    text subt deployer $INFRASTRUCTURE.$PLATFORM.$ROBOT.docker.shell.stop;
+    text subt deployer $INFRASTRUCTURE.$PLATFORM.$ROBOT.docker.stop;
     newline ;
 
     comment "# remove all docker containers";
-    text subt deployer $INFRASTRUCTURE.$PLATFORM.$ROBOT.docker.shell.rm;
+    text subt deployer $INFRASTRUCTURE.$PLATFORM.$ROBOT.docker.rm;
     newline ;
 
     comment "view running docker containers";
@@ -177,7 +177,7 @@
 
     comment "# create the docker shell on the remote host";
     comment "#   - you need to make sure the container is started before building";
-    text subt deployer $INFRASTRUCTURE.$PLATFORM.$ROBOT.docker.shell.start;
+    text subt deployer $INFRASTRUCTURE.$PLATFORM.$ROBOT.docker.start;
     newline ;
 
     comment "# clean the previously built workspaces";
@@ -319,15 +319,15 @@
     newline ;
 
     comment "# start any basestation docker containers";
-    text subt deployer $INFRASTRUCTURE.basestation.docker.shell.start;
+    text subt deployer $INFRASTRUCTURE.basestation.docker.start;
     newline ;
 
     comment "# stop any basestation docker containers";
-    text subt deployer $INFRASTRUCTURE.basestation.docker.shell.stop;
+    text subt deployer $INFRASTRUCTURE.basestation.docker.stop;
     newline ;
 
     comment "# remove any basestation docker containers";
-    text subt deployer $INFRASTRUCTURE.basestation.docker.shell.rm;
+    text subt deployer $INFRASTRUCTURE.basestation.docker.rm;
     newline ;
 
     comment "view running docker containers";
@@ -344,7 +344,7 @@
 
     comment "# create the docker shell on the remote host";
     comment "#   - you need to make sure the container is started before building";
-    text subt deployer $INFRASTRUCTURE.basestation.docker.shell.start;
+    text subt deployer $INFRASTRUCTURE.basestation.docker.start;
     newline ;
 
     comment "# clean the previously built workspaces";
