fixing typo in tutorial docs

--- a/deploybooks/env/tutorial.env.yaml
+++ b/deploybooks/env/tutorial.env.yaml
@@ -106,7 +106,7 @@
     text az acr login --name subtexplore;
     newline ;
     comment "# pull all the docker images from the azure docker registry";
-    text subt deployer $INFRASTRUCTURE.$PLATFORM.$ROBOT.docker.registry.azure.pull;
+    text subt deployer $INFRASTRUCTURE.$PLATFORM.$ROBOT.docker.registry.pull;
     newline ;
 
     subtitle Push Docker Image To Azure Docker Registry;
@@ -115,7 +115,7 @@
     text az acr login --name subtexplore;
     newline ;
     comment "# pull all the docker images from the $INFRASTRUCTURE docker registry";
-    text subt deployer $INFRASTRUCTURE.$PLATFORM.$ROBOT.docker.registry.azure.push;
+    text subt deployer $INFRASTRUCTURE.$PLATFORM.$ROBOT.docker.registry.push;
     newline ;
   }
 
@@ -295,7 +295,7 @@
     text az acr login --name subtexplore;
     newline ;
     comment "# pull all the docker images from the azure docker registry";
-    text subt deployer $INFRASTRUCTURE.basestation.docker.registry.azure.pull;
+    text subt deployer $INFRASTRUCTURE.basestation.docker.registry.pull;
     newline ;
 
     subtitle Push Docker Image To Azure Docker Registry;
@@ -304,7 +304,7 @@
     text az acr login --name subtexplore;
     newline ;
     comment "# pull all the docker images from the $INFRASTRUCTURE docker registry";
-    text subt deployer $INFRASTRUCTURE.basestation.docker.registry.azure.push;
+    text subt deployer $INFRASTRUCTURE.basestation.docker.registry.push;
     newline ;
   }
 
