testing ip fix on spot

--- a/scenarios/systems/robot/spot.xavier.env
+++ b/scenarios/systems/robot/spot.xavier.env
@@ -17,7 +17,7 @@ SOURCED_FILE_PATH=$(dirname "${BASH_SOURCE}")
 
 # Setup the bashrc roscore environment variables
 export ROS_MASTER_IP=${ppc_ip}
-export ROS_HOSTNAME=${xavier_hostname}
+export ROS_HOSTNAME=${spot1_xavier_hostname}
 
 # deployer, configuration to ssh into the remote host (basestation, ssh)
 export deploy_remote_username=$spot_xavier_deploy_remote_username
