--- a/scenarios/systems/local/basestation.env
+++ b/scenarios/systems/local/basestation.env
@@ -13,8 +13,8 @@ SOURCED_FILE_PATH=$(dirname "${BASH_SOURCE}")
 . ${SOURCED_FILE_PATH}/../../.shared.env ${1} basestation
 
 # export basestation ROS Master
-export ROS_MASTER_IP=$bs_ip
-export ROS_HOSTNAME=$bs_hostname
+export ROS_MASTER_IP=$basestation_ip
+export ROS_HOSTNAME=$basestation_hostname
 
 # export the current sourced scenario file
 export ROBOT_SCENARIO_FILE=${BASH_SOURCE}
