--- a/ansiblebooks/install-localhost.yaml
+++ b/ansiblebooks/install-localhost.yaml
@@ -1,5 +1,5 @@
 # Install basic dependencies on the remote VM
-- include: tasks/robothost.yaml
+- include: tasks/base.yaml
 - include: tasks/hosts.yaml
 
 # Install docker & docker-tools on the remote VM
