--- a/ansiblebooks/tasks/ros.yaml
+++ b/ansiblebooks/tasks/ros.yaml
@@ -35,68 +35,60 @@
         force_apt_get: yes
         install_recommends: yes
         update_cache: yes   # force apt-get update
-      when: install_ros
+      when: ros_install
 
     - command: lsb_release -sc
       register: ubuntu_distro
     - debug: msg="ubuntu distro is {{ubuntu_distro.stdout}}"
-      when: install_ros
+      when: ros_install
 
-    # - name: set up your keys
-    #   apt_repository:
-    #     repo: "deb http://packages.ros.org/ros/ubuntu {{ubuntu_distro.stdout}} main"
-    #     state: present
-    #     filename: ros-latest
-    #   become: true
-    #   when: install_ros
-
-    - name: set up your keys
+    - name: setup {{ ros_version }} keys
       shell: echo "deb http://packages.ros.org/ros/ubuntu {{ubuntu_distro.stdout}} main" > /etc/apt/sources.list.d/ros-latest.list
       become: true
-      when: install_ros
+      when: ros_install
 
-    - name: setup apt keys
-      shell: "apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key {{ ros.melodic.key }}"
+    - name: setup {{ ros_version }} apt keys
+      shell: "curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | sudo apt-key add -"
       become: true
-      when: install_ros
+      when: ros_install
 
-    - name: update apt packages
+    - name: update {{ ros_version }} apt packages
       become: true
       apt:
         force: yes          # force yes
         force_apt_get: yes
         install_recommends: yes
         update_cache: yes   # force apt-get update
-      when: install_ros
+      when: ros_install
 
-    - name: install ros prerequisite packages
+    - name: install ros {{ ros_version }} prerequisite packages
       become: true
       apt:
-        name: "{{ ros.melodic.packages.prereq }}"
+        name: "{{ ros[ros_version].packages.prereq }}"
         state: present
         force: yes          # force yes
         force_apt_get: yes
         install_recommends: yes
         update_cache: yes   # force apt-get update
-      when: install_ros
+      when: ros_install
 
-    - name: installation ros {{ ros.version }}
+    - name: ros {{ ros_version }} desktop full install
       apt:
-        name: "ros-{{ ros.version }}-desktop-full"
+        name: "ros-{{ ros_version }}-desktop-full"
         update_cache: yes
       become: true
-      when: install_ros
+      when: ros_install
 
-    - name: install ros extra packages
+    - name: install ros {{ ros_version }} extra packages
       become: true
       apt:
-        name: "{{ ros.melodic.packages.extra }}"
+        name: "{{ ros[ros_version].packages.extra }}"
         state: present
         force: yes          # force yes
         force_apt_get: yes
         install_recommends: yes
         update_cache: yes   # force apt-get update
-      when: install_ros
+      when: ros_install
 
     # remove previous file
     - name: Remove Previously Added Bitbucket SSH Keys
@@ -104,22 +96,22 @@
       file:
         path: /etc/ros/rosdep/sources.list.d/20-default.list
         state: absent
-      when: install_ros
+      when: ros_install
 
-    - name: rosdep initialize
+    - name: rosdep {{ ros_version }} initialize
       command: rosdep init
       become: true
-      when: install_ros
+      when: ros_install
 
-    - name: rosdep update
+    - name: rosdep {{ ros_version }} update
       command: rosdep update
-      when: install_ros
+      when: ros_install
 
-    - name: bash environment setup
+    - name: bash ros {{ ros_version }} environment setup
       lineinfile: dest={{ item.file }} state=present line={{ item.line }}
       with_items:
-        - { line: 'source /opt/ros/melodic/setup.bash', file: "/home/{{ lookup('env', 'USER') }}/.bashrc" }
-      when: install_ros
+        - { line: 'source /opt/ros/{{ ros_version }}/setup.bash', file: "/home/{{ lookup('env', 'USER') }}/.bashrc" }
+      when: ros_install
 
     - name: check that zshrc exists
       stat:
@@ -128,11 +120,10 @@
       when: >
         inventory_hostname is not match("azure-*")
 
-    - name: zsh environment setup
+    - name: zsh ros {{ ros_version }} environment setup
       lineinfile: dest={{ item.file }} state=present line={{ item.line }}
       with_items:
-        - { line: 'source /opt/ros/melodic/setup.zsh', file: "/home/{{ lookup('env', 'USER') }}/.zshrc" }
+        - { line: 'source /opt/ros/{{ ros_version }}/setup.zsh', file: "/home/{{ lookup('env', 'USER') }}/.zshrc" }
       when:
-        install_ros and stat_result.stat.exists and
+        ros_install and stat_result.stat.exists and
         inventory_hostname is not match("azure-*")
-
