adding ulimits to allow user process to set negative nice values

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -433,6 +433,8 @@ services:
     # shm_size: 2560m
     # extend gpu or non-gpu
     privileged: true
+    ulimits:
+      nice: 40
     security_opt:
       - seccomp:unconfined
     volumes:
