--- a/scenarios/.docker.env
+++ b/scenarios/.docker.env
@@ -26,9 +26,8 @@ export LOCAL_NETWORK_IP_RANGE="10.3.0.0/22"
 
 # docker image tag -- matched deployer commit hash of when the docker images where built
 # -- temporary if switch, until all systems migrate to newest docker tag
-if [[ ${PLATFORM} == "ugv" ]]; then
-  export DOCKER_IMAGE_TAG=release.0.3
-else
+export DOCKER_IMAGE_TAG=release.0.3
+if [[ ${PLATFORM} == "spot" ]]; then
   export DOCKER_IMAGE_TAG=0.2.c40347f
 fi
 
