adding canary configs

--- a/ansiblebooks/inventory/robot.ini
+++ b/ansiblebooks/inventory/robot.ini
@@ -26,6 +26,8 @@ robot-uav-ds2
 robot-uav-ds3
 robot-uav-ds4
 robot-uav-canary1
+robot-uav-canary2
+robot-uav-canary3
 
 # ansible extra variable setup for each host
 
@@ -100,4 +102,10 @@ ansible_ssh_user=uav
 ansible_ssh_user=uav
 
 [robot-uav-canary1]
+ansible_ssh_user=snuc
+
+[robot-uav-canary2]
+ansible_ssh_user=snuc
+
+[robot-uav-canary3]
 ansible_ssh_user=snuc
