--- a/ansiblebooks/inventory/ssh-robot.cfg
+++ b/ansiblebooks/inventory/ssh-robot.cfg
@@ -129,3 +129,18 @@ Host robot-uav-canary1
   StrictHostKeyChecking no
   IdentitiesOnly yes
   IdentityFile ~/.ssh/deploy
+
+
+Host robot-uav-canary2
+  HostName canary2
+  User snuc
+  StrictHostKeyChecking no
+  IdentitiesOnly yes
+  IdentityFile ~/.ssh/deploy
+
+Host robot-uav-canary3
+  HostName canary3
+  User snuc
+  StrictHostKeyChecking no
+  IdentitiesOnly yes
+  IdentityFile ~/.ssh/deploy
