fixing canary transfer

--- a/scenarios/transfer/uav.env
+++ b/scenarios/transfer/uav.env
@@ -11,6 +11,7 @@
 export deploy_rsync_opts="
   --exclude=src/basestation/
   --exclude=src/ugv/
+  --exclude=src/uav/hardware/canary_teensy_server/
   --exclude=src/.git/modules/ugv/
   --exclude=src/simulation/subt_gazebo/models/
   --exclude=src/operations/azurebooks/subt/.terraform/
