adding deployer completion for xavier service

--- a/deploybooks/workspaces/ugv.xavier.yaml
+++ b/deploybooks/workspaces/ugv.xavier.yaml
@@ -1,6 +1,14 @@
 - scenarios:
   - +extend: workspaces/base/melodic
 
+  - service:
+    - start:
+      # stop xavier startup service
+      - sudo service ugv_xavier_objdet start
+    - stop:
+      # stop xavier startup service
+      - sudo service ugv_xavier_objdet stop
+
   - core:
     # export the docker compose service name
     - export SERVICE=core
